Fixed Searchbar z-index issue & made suggestions list scrollable

--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -7,5 +7,5 @@
 }
 
 .container img {
-  @apply absolute top-0 bottom-0 left-0 right-0 w-full h-full object-cover
+  @apply absolute top-0 bottom-0 left-0 right-0 w-full h-full object-cover animate-fadeIn
 }
